--- a/daydream_subject_2_pupil_size.Rmd
+++ b/daydream_subject_2_pupil_size.Rmd
@@ -318,37 +318,33 @@ filtered_data <- filtered_data %>%
   mutate(InverseLuminosity = 1 / Luminosity)
 
 # Linear model
-model <- lm((LeftEyePupilSize + RightEyePupilSize) / 2 ~ InverseLuminosity, data = filtered_data)
+model_linear <- lm((LeftEyePupilSize + RightEyePupilSize) / 2 ~ InverseLuminosity, data = filtered_data)
 
-# Non-linear model (generalized additive model)
-fit_gam_model <- function(data) {
-  gam((LeftEyePupilSize + RightEyePupilSize) / 2 ~ s(InverseLuminosity), data = data)
-}
-
-# Create the model
-model_gam <- fit_gam_model(data_interpolated)
+# Non-linear(generalized additive) model
+model_gam <- gam((LeftEyePupilSize + RightEyePupilSize) / 2 ~ s(InverseLuminosity), data = filtered_data)
 
 # Normalization
-data_subtractive <- normalize_pupil_size(filtered_data, model)
+data_linear <- normalize_pupil_size(filtered_data, model_linear)
+data_gam <-normalize_pupil_size(filtered_data, model_gam)
 
-# Create plots for subtractive normalization
+# Create plots with residuals from linear model
 plot1 <- create_pupil_plot(
-  data_subtractive %>% 
-    filter(data_subtractive$VideoMode == "Normal", data_subtractive$VideoName == "Main_Mono_HighLayer_Strong", data_subtractive$Phase == "Video"), "Normal Mono", common_y_limits, luminosity_factor)
+  data_linear %>% 
+    filter(data_linear$VideoMode == "Normal", data_linear$VideoName == "Main_Mono_HighLayer_Strong", data_linear$Phase == "Video"), "Normal Mono Linear Residual", common_y_limits, luminosity_factor)
 plot2 <- create_pupil_plot(
-  data_subtractive %>% 
-    filter(data_subtractive$VideoMode == "Normal", data_subtractive$VideoName == "Main_Stereo_HighLayerStrong", data_subtractive$Phase == "Video"), "Normal Stereo", common_y_limits, luminosity_factor)
+  data_linear %>% 
+    filter(data_linear$VideoMode == "Normal", data_linear$VideoName == "Main_Stereo_HighLayerStrong", data_linear$Phase == "Video"), "Normal Stereo Linear Residual", common_y_limits, luminosity_factor)
 plot3 <- create_pupil_plot(
-  data_subtractive %>% 
-    filter(data_subtractive$VideoMode == "Hallucinations", data_subtractive$VideoName == "Main_Mono_HighLayer_Strong", data_subtractive$Phase == "Video"), "Hallucination Mono", common_y_limits, luminosity_factor)
+  data_linear %>% 
+    filter(data_linear$VideoMode == "Hallucinations", data_linear$VideoName == "Main_Mono_HighLayer_Strong", data_linear$Phase == "Video"), "Hallucination Mono Linear Residual", common_y_limits, luminosity_factor)
 plot4 <- create_pupil_plot(
-  data_subtractive %>% 
-    filter(data_subtractive$VideoMode == "Hallucinations", data_subtractive$VideoName == "Main_Stereo_HighLayerStrong", data_subtractive$Phase == "Video"), "Hallucination Stereo", common_y_limits, luminosity_factor)
+  data_linear %>% 
+    filter(data_linear$VideoMode == "Hallucinations", data_linear$VideoName == "Main_Stereo_HighLayerStrong", data_linear$Phase == "Video"), "Hallucination Stereo Linear Residual", common_y_limits, luminosity_factor)
 
 # Combine all plots into a 2x2 layout and display
 p <- (plot1 + plot2) / (plot3 + plot4) +
   plot_layout(guides = "collect") + # Collect the legends into one
-  plot_annotation(title = "Subject 2 Pupil Size Normalized by Luminosity") # Add a supertitle
+  plot_annotation(title = "Subject 2 Pupil Size Normalized by Luminosity, Linear Model") # Add a supertitle
 
 print(p)
 print(plot1)
@@ -356,6 +352,33 @@ print(plot2)
 print(plot3)
 print(plot4)
 
+# Create plots with residuals from non-linear (generalized additive) model
+plot1 <- create_pupil_plot(
+  data_gam %>% 
+    filter(data_gam$VideoMode == "Normal", data_gam$VideoName == "Main_Mono_HighLayer_Strong", data_gam$Phase == "Video"), "Normal Mono GAM Residual", common_y_limits, luminosity_factor)
+plot2 <- create_pupil_plot(
+  data_gam %>% 
+    filter(data_gam$VideoMode == "Normal", data_gam$VideoName == "Main_Stereo_HighLayerStrong", data_gam$Phase == "Video"), "Normal Stereo GAM Residual", common_y_limits, luminosity_factor)
+plot3 <- create_pupil_plot(
+  data_gam %>% 
+    filter(data_gam$VideoMode == "Hallucinations", data_gam$VideoName == "Main_Mono_HighLayer_Strong", data_gam$Phase == "Video"), "Hallucination Mono GAM Residual", common_y_limits, luminosity_factor)
+plot4 <- create_pupil_plot(
+  data_gam %>% 
+    filter(data_gam$VideoMode == "Hallucinations", data_gam$VideoName == "Main_Stereo_HighLayerStrong", data_gam$Phase == "Video"), "Hallucination Stereo GAM Residual", common_y_limits, luminosity_factor)
+
+# Combine all plots into a 2x2 layout and display
+p <- (plot1 + plot2) / (plot3 + plot4) +
+  plot_layout(guides = "collect") + # Collect the legends into one
+  plot_annotation(title = "Subject 2 Pupil Size Normalized by Luminosity, Generalized Additive Model") # Add a supertitle
+
+print(p)
+print(plot1)
+print(plot2)
+print(plot3)
+print(plot4)
+
+summary(model)
+summary(model_gam)
 
 ```
 
