Added pilot folder to organize data

--- a/daydream_subject_2_pupil_size.Rmd
+++ b/daydream_subject_2_pupil_size.Rmd
@@ -27,7 +27,7 @@ library(mgcv)
 mds_dir <- here::here()
 
 # Import data
-data <- read.csv("2_DeviceData.csv", sep=";")
+data <- read.csv("pilot/2_DeviceData.csv", sep=";")
 ```
 
 ## Splitting Vectors into Directional Components
